[package]
name = "xrml-traits"
version ="0.1.0"
authors = ["Logan Saether <x@logansaether.com>"]
edition = "2018"

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.1'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
tag = 'v2.0.0-rc5'
version = '2.0.0-rc5'

[features]
default = ["std"]
std = [
    'codec/std',
    'sp-runtime/std',
    'sp-std/std',
]
